--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
   "rules": {
     "comma-dangle": "off",
     "no-console": "off",
+    "react/prop-types": "off",
     "prettier/prettier": [
       "error",
       {
