update:增加测试dev config

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server": "nodemon --inspect=9229 -e js,json,yaml -w config -w server server/server.js",
     "server-test": "cross-env NODE_ENV=test npm run server",
     "dev": "nodemon -w config -w scripts -w mock/mock-map.js -w client/theme scripts/server.js",
+    "dev1": "cross-env NODE_ENV=development webpack-dev-server --inline --progress --config config/webpack.config.dev.js",
     "lint": "eslint . --fix --format codeframe",
     "lint-staged": "lint-staged",
     "test": "jest --forceExit",
@@ -43,7 +44,7 @@
     "react-redux": "^7.2.0",
     "@rematch/core": "^1.0.6",
     "immutable": "^3.8.1",
-    "history": "^4.7.2",
+    "history": "^4.10.1",
     "rc-drawer-menu": "^1.1.0",
     "classnames": "^2.2.6",
     "nprogress": "^0.2.0",
