--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "body-parser": "^1.15.1",
     "sequelize": "^5.21.5",
     "mysql2": "^2.1.0",
+    "mysql": "^2.18.1",
+    "sequelize-auto": "^0.4.29",
     "nodemailer": "^6.2.1",
     "glob": "^7.0.5",
     "js-yaml": "^3.13.1",
