--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "qs": "^6.5.1",
     "bluebird": "^3.4.1",
     "lodash": "^4.17.4",
+    "crypto-js": "^4.0.0",
     "moment": "^2.15.1",
     "@rematch/core": "^1.0.6",
     "antd": "^3.26.0",
