--- a/config/app.yaml
+++ b/config/app.yaml
@@ -1,8 +1,8 @@
 # 应用标识
-appCode: hum-face
+appCode: FACE
 
 # 系统的标题
-pageTitle: 统一登录平台-脸
+pageTitle: 统一登录平台
 
 # 主题
 theme: antd/diy
@@ -11,7 +11,7 @@ theme: antd/diy
 apiPrefix: /api
 
 # 基础路径
-baseURI: "/face"
+baseURI: '/face'
 
 server:
   port: 8080
