--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "babel-runtime": "^6.9.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
+    "cz-conventional-changelog": "3.3.0",
     "prettier": "^1.19.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
@@ -155,5 +156,10 @@
       "text",
       "text-summary"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
