--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "babel-runtime": "^6.9.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "cz-conventional-changelog": "3.3.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^6.3.0",
     "prettier": "^1.19.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
@@ -159,7 +160,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-customizable"
     }
   }
 }
