--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "eslint . --fix --format codeframe",
     "lint-staged": "lint-staged",
     "test": "jest --forceExit",
+    "release": "standard-version",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
     "check": "npm-check --update --skip-unused",
     "precommit": "lint-staged",
     "build": "cross-env NODE_ENV=production node scripts/compile.js",
@@ -97,6 +99,8 @@
     "eslint": "^6.8.0",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.3.0",
+    "standard-version": "^9.0.0",
+    "conventional-changelog-cli": "^2.1.0",
     "prettier": "^1.19.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
